Added invitation notification system with accept/decline functionality
- Created InvitationsScreen for managing event invitations
- Added pendingInvites field to Event model
- Implemented accept/decline functionality for event invitations
- Added notification badges to MainScreen
- Users must accept invitations to view event details
- Non-creators cannot see delete buttons
- Updated Firestore rules for invitation handling
- Fixed EventRepository with proper callbackFlow implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- Comment out location permissions for now to test -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> -->
+    <!-- Remove WRITE_EXTERNAL_STORAGE as it's not needed for Maps -->
+    <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
@@ -15,8 +18,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EventSync">
+        android:theme="@style/Theme.EventSync"
+        tools:targetApi="33">
 
+        <!-- Google Maps API Key - Use @string resource instead of ${MAPS_API_KEY} -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAQzMPUKg8P2YQr2Z2VCHYFseaxzY32kOE" />
+
+        <!-- Remove this conflicting meta-data -->
+        <!-- <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" /> -->
 
         <activity
             android:name=".MainActivity"
@@ -25,10 +38,8 @@
             android:theme="@style/Theme.EventSync">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
